# mcp-notebooklm

./: .flake8  .gitignore  .markdownlint.json  README.md  pyproject.toml  ruff.toml
src/mcp_notebooklm/: main.py  server.py  service.py
