[project]
name = "mcp-notebooklm"
version = "0.1.0"
description = "MCP server that lets AI assistants query Google NotebookLM notebooks."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
	{ name = "juanQNav", email = "juan.qn363@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.0",
    "notebooklm-py[browser]>=0.7.2",
]

[project.scripts]
mcp-notebooklm = "mcp_notebooklm.server:main"

[dependency-groups]
dev = [
	"ruff>=0.8.2",
	"flake8>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages =["src/mcp_notebooklm"]


